--- a/closedverse_main/templates/closedverse_main/comment-view.html
+++ b/closedverse_main/templates/closedverse_main/comment-view.html
@@ -5,7 +5,7 @@
 <div class="post-list-outline">
   <a class="post-permalink-button info-ticker" href="{% url "main:post-view" comment.original_post.id %}">
     <span class="icon-container {% user_class comment.original_post.creator %}"><img src="{% avatar comment.original_post.creator.avatar comment.original_post.feeling %}" class="icon"></span>
-    <span>View <span class="post-user-description">{{ comment.original_post.creator.nickname }}'s post ({{ comment.original_post.body|truncatechars:35 }})</span> for this comment.</span>
+    <span>View <span class="post-user-description">{{ comment.original_post.creator.nickname }}'s post ({{ comment.original_post.trun|truncatechars:35 }})</span> for this comment.</span>
   </a>
 </div>
 <div class="post-list-outline">
