--- a/closedverse_main/templates/closedverse_main/post-view.html
+++ b/closedverse_main/templates/closedverse_main/post-view.html
@@ -58,8 +58,8 @@
 {% if not request.user.is_authenticated %}
 <div class="guest-message">
   <p>You must sign in to post a comment.<br><br>Sign in using a Closedverse account to make posts and comments, as well as give Yeahs and follow users.</p>
-  <a href="/signup" class="arrow-button"><span>Create an account</span></a>
-  <a href="/help/faq" class="arrow-button"><span>FAQ/Frequently Asked Questions</span></a>
+  <a href="{% url "main:signup" %}" class="arrow-button"><span>Create an account</span></a>
+  <a href="{% url "main:help-faq" %}" class="arrow-button"><span>FAQ/Frequently Asked Questions</span></a>
 </div>
 {% else %}
 {% comment_form post request.user %}
