--- a/closedverse_main/templates/closedverse_main/user_view.html
+++ b/closedverse_main/templates/closedverse_main/user_view.html
@@ -1,6 +1,6 @@
 {% extends "closedverse_main/layout.html" %}
 {% block main-body %}{% load closedverse_user %}
-{% user_sidebar request user profile 0 %}
+{% user_sidebar request user profile 0 False fr %}
 <div class="main-column">
     <div class="post-list-outline">
         <h2 class="label">Recent posts</h2>
