--- a/closedverse_main/templates/closedverse_main/help/faq.html
+++ b/closedverse_main/templates/closedverse_main/help/faq.html
@@ -12,16 +12,49 @@
 		
         <h2>Closedverse? What?</h2>
         <p>Yes, that's the name I'm using.</p>
-        <p>This entire thing was supposed to be an Openverse parody and was meant to be made completely and entirely made from when PF2M closed Openverse to now in a span of a few weeks, meant to </p>
+        <p>This entire thing was supposed to be an Openverse parody and was meant to be made completely and entirely made from when PF2M closed Openverse to now in a span of a few weeks, but I did not get that done in time thanks to school, PF2M was informed beforehand and didn't want to work on Openverse any more after his knowing of this. Oh well.</p>
 
-        <h2>I received a comment or message that is offensive, threatening, or upsetting.</h2>
-        <p>Harassment of any kind, including slander, defamation of another user, disclosure of personal information, or invasion of privacy, is a violation of the Miiverse Code of Conduct. Even in messages between friends, such exchanges violate the Miiverse Code of Conduct.</p>
-        <p>Please report any posts or messages that violate the Miiverse Code of Conduct. If you are experiencing harassment, please use the Report function on the offending user’s profile screen.</p>
-        <p>Furthermore, if you do not want to receive comments or friend requests from a particular user, you may use the Block function on the user’s profile screen.</p>
+        <h2>What's wrong with the other 4 Miiverse clones? There are 5 now!</h2>
+		<p>There are indeed now 5 Miiverse clones. There are, though, major and minor problems with each of them, which I will list without any bias.</p>
+		<p>
+		<strong>Openverse</strong><br>
+		<ul>
+		<li>This was the "first" Miiverse clone, starting in January 2017 by PF2M.</li>
+		<li>One of the biggest problems, if not one of the only problems is that it was made with really naive and not so great programming.</li>
+		<li>The result is that Openverse was really hard to develop for, and didn't deviate much from Miiverse anyway.</li>
+		<li>The only real unique features that Miiverse didn't have are post editing, custom avatars, and drawing.</li>
+		<li>Also, it wasn't <a href="https://github.com/ariankordi/openverse">(meant to be)</a> open-source, which was its original "purpose" from the beginning?</li>
+		</ul>
+		<strong>Grape</strong><br>
+		<ul>
+		<li>Grape was really not meant for people or cared for people, it was more of a "Miiverse emulation".</li>
+		<li>It wasn't even great at being a Miiverse emulation anyway since there were so many features that weren't like Miiverse, and basically no new features.</li>
+		<li>It did have more features than Openverse and had <em>slightly</em> better programming, but still not good programming.</li>
+		<li>It's completely dead now, if it ever was alive.</li>
+		</ul>
+		<strong>Cedar</strong><br>
+		<ul>
+		<li>Made from the ashes of Grape's programming style. Slightly better programming, easier to develop for.</li>
+		<li>However, there's just something not right about Eric and Seth's collaboration on this.</li>
+		<li>It's really lackluster and reinvents the wheel when it doesn't need to. Lacks features that Miiverse has but implements useless ones.</li>
+		<li>Not open-source, and slow to develop for as always. Also, narcissism.</li>
+		</ul>
+		
+		<strong>Miiverse 2.0</strong><br>
+		<ul>
+		<li>I can't really complain about this one since it's not finished. But, it's still in PHP, which is a language that kind of encourages un-good programming styles. <strong>All</strong> of the previous Miiverse clones were in PHP.</li>
+		</ul>
+		</p>
 
-        <h2>I saw a comment with a spoiler in it, even though it wasn’t marked as having spoilers.</h2>
-        <p>It’s up to users to mark their posts as having spoilers. However, if someone forgets to do this, you can help by reporting spoilers.</p>
-        <p>Comments and posts that receive enough spoiler reports will be marked as spoilers, viewable only to people who have chosen to keep spoilers visible.</p>
+        <h2>What are the advantages of this one?</h2>
+        <p>I'll list what deviates this from the other Miiverse clones.</p>
+		<ul>
+		<li>I think this is the only Miiverse clone not written in PHP. This is written in Python and uses the Django framework, and Django is a framework for crazy fast development with the best programming.</li>
+		<li>There are pretty much no worries about bad programming. Closedverse doesn't have much of the naive programming practices other naive PHP clones have, and it also works completely around much of average security worries (SQL injection; we have not written any SQL, XSS; we are automatically escaping, CSRF; it's handled automatically)</li>
+		<li>Why would you care? Well, this is now easy to develop for, I can add features quickly and nicely. It's also secure, there isn't any chance someone can put something into a box and control the database (SQL injections)</li>
+		<li>Yes, this doesn't have many features at the moment, but I'm working to <i>really</i> deviate from Miiverse, such as supporting Markdown and having friends, but also improving upon most of what PF2M had originally intended to do but couldn't.</li>
+		<li><a href="https://github.com/ariankordi/closedverse">This is an open-source project!</a> Anyone can view the code that runs this very site and make improvements if they wanted to. I don't have anything to hide.</li>
+		</ul>
 
         <h2>Suck</h2>
         <div class="guide-img6">
