--- a/closedverse_main/templates/closedverse_main/help/faq.html
+++ b/closedverse_main/templates/closedverse_main/help/faq.html
@@ -31,10 +31,11 @@
 		<li>It wasn't even great at being a Miiverse emulation anyway since there were so many features that weren't like Miiverse, and basically no new features.</li>
 		<li>It did have more features than Openverse and had <em>slightly</em> better programming, but still not good programming.</li>
 		<li>It's completely dead now, if it ever was alive.</li>
+		<li>Also, bad users.</li>
 		</ul>
 		<strong>Cedar</strong><br>
 		<ul>
-		<li>Made from the ashes of Grape's programming style. Slightly better programming, easier to develop for.</li>
+		<li>Made from the ashes of Grape's programming style. Slightly better programming, easier to develop for but still not to modify.</li>
 		<li>However, there's just something not right about Eric and Seth's collaboration on this.</li>
 		<li>It's really lackluster and reinvents the wheel when it doesn't need to. Lacks features that Miiverse has but implements useless ones.</li>
 		<li>Not open-source, and slow to develop for as always. Also, narcissism.</li>
@@ -50,7 +51,7 @@
         <p>I'll list what deviates this from the other Miiverse clones.</p>
 		<ul>
 		<li>I think this is the only Miiverse clone not written in PHP. This is written in Python and uses the Django framework, and Django is a framework for crazy fast development with the best programming.</li>
-		<li>There are pretty much no worries about bad programming. Closedverse doesn't have much of the naive programming practices other naive PHP clones have, and it also works completely around much of average security worries (SQL injection; we have not written any SQL, XSS; we are automatically escaping, CSRF; it's handled automatically)</li>
+		<li>There are pretty much no worries about bad programming. Closedverse doesn't have much of the naive programming practices other naive PHP clones have, and it also works completely around much of average security worries (SQL injection; we have not written any SQL, XSS; we are automatically escaping and templating, CSRF; it's handled automatically in Django)</li>
 		<li>Why would you care? Well, this is now easy to develop for, I can add features quickly and nicely. It's also secure, there isn't any chance someone can put something into a box and control the database (SQL injections)</li>
 		<li>Yes, this doesn't have many features at the moment, but I'm working to <i>really</i> deviate from Miiverse, such as supporting Markdown and having friends, but also improving upon most of what PF2M had originally intended to do but couldn't.</li>
 		<li><a href="https://github.com/ariankordi/closedverse">This is an open-source project!</a> Anyone can view the code that runs this very site and make improvements if they wanted to. I don't have anything to hide.</li>
