--- a/closedverse_main/templates/closedverse_main/layout.html
+++ b/closedverse_main/templates/closedverse_main/layout.html
@@ -29,15 +29,11 @@
           <li id="global-menu-list">
             <ul>
               <li id="global-menu-mymenu"><a href="{% url "main:user-view" request.user.username %}"><span class="icon-container {% user_class request.user %}"><img src="{% avatar request.user.avatar %}" alt="User Page"></span><span>User Page</span></a></li>
-
-			  <!-- !! -->
-			  <li id="global-menu-feed"><a href="/activity" class="symbol" onclick="event.preventDefault(),alert('Nothing here')"><span>Activity Feed</span></a></li>
-			  <!-- !! // -->
-
+			  <li id="global-menu-feed"><a href="{% url "main:activity" %}" class="symbol"><span>Activity Feed</span></a></li>
               <li id="global-menu-community"><a href="/" class="symbol"><span>Communities</span></a></li>
 
 			  <!-- !! -->
-			  <li id="global-menu-message"><a href="/messages" class="symbol" onclick="event.preventDefault(),alert('Todo friends & messages models (and href for friends in user sidebar)')"><span>Messages</span></a></li>
+			  <li id="global-menu-message"><a href="/messages" class="symbol" onclick="event.preventDefault(),alert('Todo messages models')"><span>Messages</span></a></li>
 			  <!-- !! // -->
 
 			  <li id="global-menu-news"><a href="{% url "main:notifications" %}" class="symbol"></a></li>
