--- a/closedverse_main/templates/closedverse_main/community_list.html
+++ b/closedverse_main/templates/closedverse_main/community_list.html
@@ -4,12 +4,12 @@
 		<div id="community-eyecatch"></div>
 	</div>
 	<div class="community-top-sidebar">
-		<form action="/titles/search" class="search">
+		<!--<form action="/titles/search" class="search">
 			<input maxlength="32" name="query" placeholder="Search Communities" type="text"><input title="Search" type="submit" value="q">
 		</form>
 		<div id="identified-user-banner">
 			<a class="list-button" href="/identified_user_posts"><span class="title">Get the latest news here!</span><span class="text">Posts from Verified Users</span></a>
-		</div>
+		</div>-->
 		<div class="post-list-outline index-memo">
 			<h2 class="label">Closedverse</h2>
 			<p>How are you seeing this?<!--This is something I made in a week. Good projects don't have to be or take 6 months in the making. Is it better than Openverse? I don't know, but you can check it out for yourself.--></p>
